--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>StyleAI - Seu Guarda-Roupa Virtual Inteligente</title>
+    <title>StyleISA - Seu Guarda-Roupa Virtual Inteligente</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -12,7 +12,7 @@
         <header class="header">
             <div class="logo">
                 <i class="fas fa-tshirt"></i>
-                <h1>Style<span>AI</span></h1>
+                <h1>Style<span>ISA</span></h1>
             </div>
             <nav class="nav">
                 <ul>
