--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <div class="store-integration">
                         <h4>Conecte suas lojas favoritas</h4>
                         <div class="store-buttons">
-                            <button class="store-btn"><img src="assets/icons/shein.png" alt="Shein"> Shein</button>
+                            <button class="store-btn"><img src="icons.png" alt="Shein"> Shein</button>
                             <button class="store-btn"><img src="assets/icons/amazon.png" alt="Amazon"> Amazon</button>
                             <button class="store-btn"><img src="assets/icons/zara.png" alt="Zara"> Zara</button>
                             <button class="store-btn"><i class="fas fa-plus"></i> Outra</button>
