--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <h4>Conecte suas lojas favoritas</h4>
                         <div class="store-buttons">
                             <button class="store-btn"><img src="icons.png" alt="Shein"> Shein</button>
-                            <button class="store-btn"><img src="assets/icons/amazon.png" alt="Amazon"> Amazon</button>
+                            <button class="store-btn"><img src="icons8-amazon-50.png" alt="Amazon"> Amazon</button>
                             <button class="store-btn"><img src="assets/icons/zara.png" alt="Zara"> Zara</button>
                             <button class="store-btn"><i class="fas fa-plus"></i> Outra</button>
                         </div>
