--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <div class="store-buttons">
                             <button class="store-btn"><img src="icons.png" alt="Shein"> Shein</button>
                             <button class="store-btn"><img src="icons8-amazon-50.png" alt="Amazon"> Amazon</button>
-                            <button class="store-btn"><img src="assets/icons/zara.png" alt="Zara"> Zara</button>
+                            <button class="store-btn"><img src="icons8-coordenada-z-50.png" alt="Zara"> Zara</button>
                             <button class="store-btn"><i class="fas fa-plus"></i> Outra</button>
                         </div>
                     </div>
