--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <p>Adicione peças das suas lojas favoritas e deixe nossa IA criar looks incríveis para você</p>
                 </div>
                 <div class="hero-image">
-                    <img src="assets/images/fashion-hero.png" alt="Modelo com look gerado pela IA">
+                    <img src="assets/images/fashion-hero.png" alt="foto do look">
                 </div>
             </section>
 
